--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -268,6 +268,9 @@ div[data-global-layer="popups"] .popup-manager__popup-container
   @extend .padding-lr-5
   @extend .padding-tb-3
 
+.transition-ease
+  transition: all 300ms ease
+
 .bg-shadowy
   background-color: rgba(0,0,0,0.1)
 
