migrating to golang api implementation

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -23,6 +23,9 @@ a[href]
   @extend .fg-0.char.darken-3
   @extend .no-underline
 
+a.button[href]
+  @extend .fg-white
+
 strong, b
   font-weight: 400
 
