--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,3 +1,7 @@
+a
+  @extend .fg-0.char.darken-3
+  @extend .no-underline
+
 @import "bases"
 @import "base-4392f1"
 
@@ -5,6 +9,21 @@
   #{$property}: -moz-calc(#{$expression})
   #{$property}: -webkit-calc(#{$expression})
   #{$property}: calc(#{$expression})
+
+@for $i from 1 through 5
+  $amt: (10 + $i) + unquote("px")
+
+  .shadow-#{$i}
+    box-shadow: 0px 0px $amt 0px rgba(0,0,0,0.15)
+
+  .shadow-#{$i}--dark
+    box-shadow: 0px 0px $amt 0px rgba(0,0,0,0.25)
+
+.transition-ease
+  transition: all 300ms ease
+
+.bg-shadowy
+  background-color: rgba(0,0,0,0.1)
 
 p, label, input[type="text"], textarea, a
   font-size: 1.0rem
@@ -18,10 +37,6 @@ p, label, input[type="text"], textarea, a
 
 .no-underline
   text-decoration: none
-
-a[href]
-  @extend .fg-0.char.darken-3
-  @extend .no-underline
 
 a.button[href]
   @extend .fg-white
@@ -42,8 +57,11 @@ html, body
   @extend .padding-tb-5
   @extend .padding-lr-8
 
+.input-padding--tb
+  @extend .padding-tb-5
+
 div[data-global-layer="popups"]
-  @extend .position-fixed
+  @extend .position-absolute
   @extend .top-0
   @extend .left-0
   @extend .z-50
@@ -64,7 +82,8 @@ div[data-global-layer="popups"] .popup-manager__popup-container
   @extend .position-absolute
   @extend .bg-white
   @extend .border-light
-  @extend .radius-3
+  @extend .radius-2
+  @extend .shadow-1
   
 .icon:before
   font-size: 1.1rem
@@ -107,6 +126,10 @@ div[data-global-layer="popups"] .popup-manager__popup-container
   @extend .display-table 
   @extend .display-table--fixed 
   @extend .width-50
+
+.vert-hack__cell
+  @extend .display-table-cell
+  @extend .v-align-middle
 
 .border-bottom-light
   @extend .border-bottom-1
@@ -172,7 +195,7 @@ div[data-global-layer="popups"] .popup-manager__popup-container
   @extend .transition-ease
 
 .hoc-table__table tbody:hover
-  @extend .bg-white-darken-10
+  @extend .bg-white-darken-4
 
 .hoc-table__table tbody td
   @extend .border-bottom-1
@@ -270,19 +293,14 @@ div[data-global-layer="popups"] .popup-manager__popup-container
 .select-item
   @extend .padding-lr-5
   @extend .padding-tb-3
-
-.transition-ease
-  transition: all 300ms ease
-
-.bg-shadowy
-  background-color: rgba(0,0,0,0.1)
-
-.hoc-select__item
   @extend .pointer
   @extend .transition-ease
 
-.hoc-select__item:hover
+.select-item:hover
   @extend .bg-shadowy
+
+.hoc-select__item
+  @extend .select-item
 
 .balloon-input__input
   transition: all 0.3s ease-in-out
