lots of work on game management + membership

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -310,6 +310,9 @@ div[data-global-layer="popups"] .popup-manager__popup-container
 .hoc-select__item
   @extend .select-item
 
+.hoc-modal__content
+  @extend .padding-10
+
 .balloon-input__input
   transition: all 0.3s ease-in-out
   @extend .z-2
