popup related fixes - allow specify conditions to close under

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -184,8 +184,12 @@ div[data-global-layer="popups"] .popup-manager__popup-container
 .application-footer__inner
   @extend .padding-tb-30 
 
+.hoc-menu__button-container
+  @extend .display-inline-block
+
 .hoc-menu__toggle
   @extend .button
+  @extend .display-inline-block
 
 .hoc-table__table
   @extend .align-left
