[CHUI-6] loading icon :tada:

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -8,6 +8,7 @@
 @import "bits/cursors"
 @import "bits/displays"
 @import "bits/font-sizes"
+@import "bits/margins"
 @import "bits/outlines"
 @import "bits/overflows"
 @import "bits/paddings"
@@ -47,4 +48,5 @@ html, body
 @import "kilos/hoc-modal"
 @import "kilos/hoc-select"
 @import "kilos/hoc-table"
+@import "kilos/loading"
 @import "kilos/popups"
