[CHUI-8] generating lots of breakpoint/responsive classes
save

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -2,11 +2,13 @@
 @import "base-4392f1"
 
 @import "mixins/calc"
+@import "mixins/breakpoints"
 
 @import "bits/backgrounds"
 @import "bits/borders"
 @import "bits/cursors"
 @import "bits/displays"
+@import "bits/floats"
 @import "bits/font-sizes"
 @import "bits/margins"
 @import "bits/outlines"
@@ -17,6 +19,7 @@
 @import "bits/text-decoration"
 @import "bits/transitions"
 @import "bits/typography"
+@import "bits/widths"
 
 .bg-shadowy
   background-color: rgba(0,0,0,0.1)
@@ -50,3 +53,4 @@ html, body
 @import "kilos/hoc-table"
 @import "kilos/loading"
 @import "kilos/popups"
+
