--- a/app/styles/bits/_displays.sass
+++ b/app/styles/bits/_displays.sass
@@ -1,3 +1,10 @@
 .display-table--fixed
   table-layout: fixed
+  +breakpoints
+    display: display-table--fixed
 
+.display-none
+  display: none
+
+  +breakpoints
+    display: none
