--- a/app/styles/bits/_margins.sass
+++ b/app/styles/bits/_margins.sass
@@ -1,2 +1,12 @@
 .margin-auto
   margin: auto
+
+  +breakpoints
+    margin: auto
+
+@for $i from 0 through 50
+  $amount: $i * 0.1
+
+  .margin-#{$i}
+    +breakpoints
+      margin: $amount + unquote("rem")
