[CHUI-13] user signup w/o google - direct auth

--- a/app/styles/bits/_font-sizes.sass
+++ b/app/styles/bits/_font-sizes.sass
@@ -5,3 +5,6 @@
   .fs-#{$fsi}, .fs-#{$fsi}:before
     font-size: $fs + unquote("rem")
 
+  .lh-#{$fsi}, .lh-#{$fsi}:before
+    line-height: $fs + unquote("rem")
+
