--- a/app/styles/bytes/_containers.sass
+++ b/app/styles/bytes/_containers.sass
@@ -2,3 +2,12 @@
   max-width: 90vw
   margin: 0 auto
 
+.responsive__half
+  @extend .width-25
+  @extend .float-left
+  @extend .width-50--max-4
+  @extend .float-none--max-4
+
+.margin-padding-tb-10
+  @extend .margin-bottom-10
+  @extend .padding-bottom-10
