--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -24,10 +24,6 @@
 .bg-shadowy
   background-color: rgba(0,0,0,0.1)
 
-p, label, input[type="text"], textarea, a
-  font-size: 1.0rem
-  line-height: 1.2rem
-
 a.button[href]
   @extend .fg-white
 
@@ -44,6 +40,7 @@ html, body
 @import "bytes/containers"
 @import "bytes/inputs"
 @import "bytes/select-item"
+@import "bytes/texts"
 @import "bytes/vert-hack"
 
 @import "kilos/application"
