[CHUI-18] displaying message for games having less than 3 users

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,12 +1,13 @@
 @import "bases"
-@import "base-4392f1"
 
 @import "mixins/calc"
 @import "mixins/breakpoints"
+@import "mixins/color-classes"
 
 @import "bits/backgrounds"
 @import "bits/borders"
 @import "bits/cursors"
+@import "bits/colors"
 @import "bits/displays"
 @import "bits/floats"
 @import "bits/font-sizes"
@@ -36,6 +37,7 @@ html, body
   *
     box-sizing: border-box
 
+@import "bytes/attentions"
 @import "bytes/buttons"
 @import "bytes/containers"
 @import "bytes/inputs"
