--- a/app/styles/bytes/_texts.sass
+++ b/app/styles/bytes/_texts.sass
@@ -7,7 +7,7 @@ textarea
   @extend .lh-1
 
 a
-  @extend .fg-0.char.darken-3
+  @extend %fg-0--darken-3
   @extend .no-underline
   @extend .pointer
 
