--- a/app/styles/bytes/_texts.sass
+++ b/app/styles/bytes/_texts.sass
@@ -1,10 +1,13 @@
 p, label, a,
 input[type="text"],
 input[type="password"],
+input[type="submit"],
 input[type="email"],
 textarea
   @extend .fs-1
   @extend .lh-2
+  font-family: 'Open Sans', sans-serif
+  font-weight: 300
 
 a
   @extend %fg-0--darken-3
