[CHUI-33] displaying game status on games#single

--- a/app/styles/bytes/_attentions.sass
+++ b/app/styles/bytes/_attentions.sass
@@ -1,11 +1,11 @@
 .attention
   @extend .radius-2
-  @extend .padding-10
+  @extend .input-padding
   @extend .border-1
 
 .attention--warning
-  @extend %bg-8--lighten-8
-  @extend %bc-8--darken-3
+  @extend .bg-8--lighten-8
+  @extend .bc-8--darken-3
   @extend .attention
 
 .attention--warning .attention--text
