--- a/app/styles/bytes/_buttons.sass
+++ b/app/styles/bytes/_buttons.sass
@@ -1,6 +1,6 @@
 .button
-  @extend %bc-0--darken-5
-  @extend %bg-0--darken-2
+  @extend .bc-0--darken-5
+  @extend .bg-0--darken-2
   @extend .transition-ease
   @extend .pointer
   @extend .radius-3
@@ -10,4 +10,4 @@
   @extend .fg-white
 
 .button:hover
-  @extend %bg-0
+  @extend .bg-0
