--- a/app/styles/bytes/_select-item.sass
+++ b/app/styles/bytes/_select-item.sass
@@ -1,8 +1,11 @@
 .select-item
-  @extend .padding-lr-5
-  @extend .padding-tb-3
   @extend .pointer
   @extend .transition-ease
+
+.select-item__action
+  @extend .padding-tb-4
+  @extend .padding-lr-5
+  @extend .display-block
 
 .select-item:hover
   @extend .bg-shadowy
