--- a/app/styles/bytes/_texts.sass
+++ b/app/styles/bytes/_texts.sass
@@ -10,7 +10,7 @@ textarea
   font-weight: 300
 
 a
-  @extend %fg-0--darken-3
+  @extend .fg-0--darken-3
   @extend .no-underline
   @extend .pointer
 
