--- a/app/styles/bits/_displays.sass
+++ b/app/styles/bits/_displays.sass
@@ -1,3 +1,10 @@
+.display-flex
+  display: flex
+
+.display-flex--center
+  @extend .display-flex
+  align-items: center
+
 .display-table--fixed
   table-layout: fixed
   +breakpoints
