[CHUI-44] adding margin bottom responsive classes

--- a/app/styles/bits/_margins.sass
+++ b/app/styles/bits/_margins.sass
@@ -10,3 +10,7 @@
   .margin-#{$i}
     +breakpoints
       margin: $amount + unquote("rem")
+
+  .margin-bottom-#{$i}
+    +breakpoints
+      margin-bottom: $amount + unquote("rem")
