--- a/app/styles/bytes/_containers.sass
+++ b/app/styles/bytes/_containers.sass
@@ -7,6 +7,10 @@
   @extend .float-left
   @extend .width-50--max-4
   @extend .float-none--max-4
+  @extend .margin-bottom-10--max-4
+
+  &:last-child
+    @extend .margin-bottom-0--max-4
 
 .margin-padding-tb-10
   @extend .margin-bottom-10
