--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,20 @@
 @import "bulma"
+@import "font-awesome"
+
+@import "var/fonts/awesome"
+@import "bases/margin"
+@import "bases/padding"
 
 html, body
   position: relative
   width: 100%
   height: 100%
+
+html *, body *
+  box-sizing: border-box
+
+main#main
+  @extend .padding-tb-10
+
+@import "compound/user-menu"
+@import "compound/application-header"
