[CHUI-56] style tweaks

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -18,7 +18,7 @@ html *, body *
   box-sizing: border-box
 
 main#main
-  @extend .padding-tb-10
+  @extend .section
 
 #popups
   @extend .position-absolute
