--- a/src/sass/bases/bounding-box.sass
+++ b/src/sass/bases/bounding-box.sass
@@ -5,8 +5,14 @@
   .width-#{$i}
     width: ($i * 2) + unquote("%")
 
+  .right-#{$i}
+    right: ($i * 2) + unquote("%")
+
   .left-#{$i}
     left: ($i * 2) + unquote("%")
+
+  .bottom-#{$i}
+    bottom: ($i * 2) + unquote("%")
 
   .top-#{$i}
     top: ($i * 2) + unquote("%")
