--- a/src/sass/bases/margin.sass
+++ b/src/sass/bases/margin.sass
@@ -4,6 +4,10 @@
   .margin-#{$i}
     margin: $amount + unquote("rem")
 
+  .margin-lr-#{$i}
+    margin-left: $amount + unquote("rem")
+    margin-right: $amount + unquote("rem")
+
   .margin-tb-#{$i}
     margin-top: $amount + unquote("rem")
     margin-bottom: $amount + unquote("rem")
