--- a/src/sass/bases/padding.sass
+++ b/src/sass/bases/padding.sass
@@ -4,6 +4,10 @@
   .padding-#{$i}
     padding: $amount + unquote("rem")
 
+  .padding-lr-#{$i}
+    padding-left: $amount + unquote("rem")
+    padding-right: $amount + unquote("rem")
+
   .padding-tb-#{$i}
     padding-top: $amount + unquote("rem")
     padding-bottom: $amount + unquote("rem")
