--- a/src/sass/bases/margin.sass
+++ b/src/sass/bases/margin.sass
@@ -16,10 +16,10 @@
     margin-right: $amount + unquote("rem")
 
   .margin-left-#{$i}
-    margin-left: $amount + unquote("rem")
+    margin-left: $amount + unquote("rem") !important
 
   .margin-top-#{$i}
-    margin-top: $amount + unquote("rem")
+    margin-top: $amount + unquote("rem") !important
 
   .margin-bottom-#{$i}
-    margin-bottom: $amount + unquote("rem")
+    margin-bottom: $amount + unquote("rem") !important
