--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -10,9 +10,9 @@ html
     link(href="https://code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet" type="text/css")
     link(href="/assets/css/app.css" type="text/css" rel="stylesheet")
   body
-    div.z-10#notes
-    div.z-9#popups
-    div.z-8#modals
+    div#notes
+    div#popups
+    div#modals
     header#header
     main#main
     footer#footer
