[CHUI-46] [skip ci]

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,6 +2,8 @@
 @import "font-awesome"
 
 @import "var/fonts/awesome"
+
+@import "bases/cursor"
 @import "bases/margin"
 @import "bases/padding"
 @import "bases/bounding-box"
@@ -23,31 +25,10 @@ html, body
 html *, body *
   box-sizing: border-box
 
+@import "layers/layers"
+
 @import "compound/bulma-extensions"
 @import "compound/hoctable"
 @import "compound/popup-menu"
-
-main#main,
-header#header,
-footer#footer
-  @extend .position-relative
-  @extend .z-3
-
-main#main
-  @extend .section
-
-#modals
-  @extend .position-fixed
-  @extend .z-10
-
-#notes
-  @extend .z-8
-
-#popups
-  @extend .position-absolute
-  @extend .top-0
-  @extend .left-0
-  @extend .z-9
-  @extend .width-50
-  @extend .height-0 
+@import "compound/grid-row"
 
