--- a/src/sass/bases/margin.sass
+++ b/src/sass/bases/margin.sass
@@ -51,4 +51,4 @@
 
     +mobile
       &-mobile
-        margin-bottom: $amount + unquote("rem")
+        margin-bottom: $amount + unquote("rem") !important
