--- a/src/sass/bases/bounding-box.sass
+++ b/src/sass/bases/bounding-box.sass
@@ -1,3 +1,9 @@
+.width-auto
+  width: auto
+
+.height-auto
+  height: auto
+
 @for $i from 0 through 50
   .height-#{$i}
     height: ($i * 2) + unquote("%")
